--- a/accounts/static/accounts/css/style_register.css
+++ b/accounts/static/accounts/css/style_register.css
@@ -1,9 +1,8 @@
 body {
     direction: rtl;
     font-family: 'Vazir', sans-serif;
-    background: linear-gradient(135deg, #e9ecef 0%, #f8f9fa 100%);
     color: #343a40;
-    background-attachment: fixed;
+    background: linear-gradient(135deg, #e9ecef 0%, #f8f9fa 100%) fixed;
 }
 
 .form-container {
@@ -27,7 +26,7 @@ body {
     margin-bottom: 8px;
     display: block;
     color: #495057;
-    letter-spacing: 0.5px;
+    letter-spacing: 1px;
 }
 
 .form-control {
